--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="calculation.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+  <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+
+  <title>Map at a specified location</title>
+  <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
+  <link rel="stylesheet" type="text/css" href="map.css" />
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
 </head>
-<body>
-<canvas id="myCanvas" width="600" height="400">Your browser does not support the HTML5 canvas tag. </canvas>
-<input type="button" value="RUN" onclick="execute()"/>
+<body id="markers-on-the-map">
+<div id="map"></div>
+<div id="points">
+  <div class="row">
+    <input type="text" id="place0" placeholder="Enter place name"/><input type="number" id="input-w-0" placeholder="Enter years"/>
+  </div>
+</div>
+<input type="button" value="Find" onclick="addNew()"/>
+<div id="buttons">
+  <input type="button" value="DRAW" onclick="draw()"/>
+</div>
+<script type="text/javascript" src='map.js'></script>
 </body>
 </html>
