--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
@@ -13,22 +14,48 @@
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
 </head>
 <body id="markers-on-the-map">
-<div class="header"><h1>Where are you really from?</h1>
-  <p>This is fun way to determine where are you from when asked, in case you have moved a lot
-  We use the given place coordinates and years spent there, to do a triangulation and calculate a spot in the middle.
-    The calculation of the common point uses the year values as weight to pull more or less to the given place</p>
-</div>
-<div class="content">
-<div id="map"></div>
-<div id="points">
-  <div class="row">
-    <div id="places" class="places"></div>
-    <input type="text" id="place" placeholder="Enter place name"/><input type="number" id="weight" placeholder="Enter years"/>
-    <input type="button" class="add" value="Add" onclick="addNew()"/> <input type="button" class="calc" value="Calculate" onclick="draw()"/>
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <div id="map"></div>
+</header>
+<!-- Page content -->
+<div class="w3-content w3-padding" style="max-width:1564px">
+  <!-- Contact Section -->
+  <div class="w3-container w3-padding-2" id="contact">
+    <h3 class="w3-border-bottom w3-border-light-grey">Places lived</h3>
+    <p>Lets enter place names and length of stay in years.</p>
+    <div class="places w3-center w3-light-gray">
+      <div class="wrapper">
+        <div class="w3-container">
+          <ul><div id="places" class="w3-display-container"></div></ul>
+        </div>
+        <div class="w3-row-padding">
+          <div class="w3-col l4 m6">
+            <div class="w3-display-container">
+              <input class="w3-input w3-section w3-border" type="text" id="place" placeholder="Enter place name"/>
+            </div>
+          </div>
+          <div class="w3-col l4 m6">
+            <div class="w3-display-container">
+              <input class="w3-input w3-section w3-border" type="number" id="weight" placeholder="Enter years"/>
+            </div>
+          </div>
+          <div class="w3-col l4 m6 ">
+            <div class="w3-display-container">
+              <input type="button" class="w3-button w3-blue w3-section" value="Add" onclick="addNew()"/>
+              <input type="button" class="w3-button w3-orange w3-section" value="Remove all" onclick="clear()"/>
+              <input type="button" class="w3-button w3-green w3-section" value="Calculate" onclick="draw()"/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End pag  content -->
   </div>
 </div>
+<footer class="w3-center w3-black w3-padding-16 w3-content" style="max-width:1500px;">
+  <p class="disclaimer">Disclaimer: We do not store any information regarding the cities nor length of stay. This page does not have cookies</p>
+</footer>
 <script type="text/javascript" src='map.js'></script>
-<p class="disclaimer">Disclaimer: We do not store any information regarding the cities nor length of stay. This page does not have cookies</p>
-</div>
 </body>
 </html>
