--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
 </head>
 <body id="markers-on-the-map">
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <div id="map"></div>
-</header>
-<!-- Page content -->
+<!-- Controls -->
 <div class="w3-content w3-padding" style="max-width:1564px">
   <!-- Contact Section -->
   <div class="w3-container w3-padding-2" id="contact">
@@ -50,7 +46,10 @@
         </div>
       </div>
     </div>
-    <!-- End pag  content -->
+    <!-- Map -->
+    <div class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+      <div id="map"></div>
+    </div>
   </div>
 </div>
 <footer class="w3-center w3-black w3-padding-16 w3-content" style="max-width:1500px;">
