--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         </div>
         <div class="w3-row-padding">
           <div class="w3-col l4 m6">
-            <div class="w3-display-container">
+            <div class="autocomplete w3-display-container">
               <input class="w3-input w3-section w3-border" type="text" id="place" placeholder="Enter place name"/>
+              <input type="hidden" id="placeId"/>
             </div>
           </div>
           <div class="w3-col l4 m6">
