--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 </head>
 <body id="markers-on-the-map">
 <header class="w3-center w3-blue w3-padding-16 w3-content" style="max-width:1500px;">
-  <p class="disclaimer">This page triangulates a place on the map based on the places listed and the years (weights) specified for each place. The bigger the value, the closer the cross point to that location</p>
+<div>
+  <img class="logo inline" src="logo.png"/>
+<p class="disclaimer inline">This page triangulates a place on the map based on the places listed and the years (weights) specified for each place. The bigger the value, the closer the cross point to that location</p>
+</div>
 </header>
 <div class="w3-content w3-padding" style="max-width:1564px">
   <div class="w3-container w3-padding-2" id="contact">
@@ -43,7 +46,7 @@
             <div class="w3-display-container">
               <input type="button" class="w3-button w3-blue w3-section" value="Add" onclick="addNew()"/>
               <input type="button" class="w3-button w3-orange w3-section" value="Remove all" onclick="removeAll()"/>
-              <input type="button" class="w3-button w3-green w3-section" value="Calculate" onclick="draw()"/>
+              <input type="button" class="w3-button w3-green w3-section" value="Calculate" onclick="drawWithAdd()"/>
             </div>
           </div>
         </div>
@@ -56,7 +59,7 @@
   </div>
 </div>
 <footer class="w3-center w3-dark-gray w3-padding-16 w3-content" style="max-width:1500px;">
-  <p class="disclaimer">This page does not store any information and does not contain cookies. If the search doesn't work, we have reached the limit per day, please try again tomorrow.</p>
+  <p>This page does not store any information and does not contain cookies. If the search doesn't work, we have reached the limit per day, please try again tomorrow.</p>
   <p>I am aware that is painfully obvious that this page needs a designer's touch</p>
 </footer>
 <script type="text/javascript" src='map.js'></script>
