--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
   </div>
 </div>
 <footer class="w3-center w3-dark-gray w3-padding-16 w3-content" style="max-width:1500px;">
-  <p>This page does not store any information and does not contain cookies. If the search doesn't work, we have reached the limit per day, please try again tomorrow.</p>
+  <p>This page does not store any information and does not contain cookies. It contains however third party cookies by <a href="https://legal.here.com/en-gb/privacy/cookie-policy">Here Maps</a>,
+    please consult their <a href="https://www.here.com/here-statement-gdpr">GDPR statement</a>.
+  </p>
+  <p>If you disagree with any of their conditions, please leave this page, since Here maps does not provide a way to disable them on our site.
+  </p>
+  <p><b>If the search doesn't work, we have reached the limit per day, please try again tomorrow.</b></p>
   <p>I am aware that is painfully obvious that this page needs a designer's touch</p>
 </footer>
 <script type="text/javascript" src='map.js'></script>
