CSS hide on small screens

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
 </head>
 <body id="markers-on-the-map">
-<header class="w3-center w3-blue w3-padding-16 w3-content" style="max-width:1500px;">
+<header class="w3-center w3-blue w3-padding-16 w3-content w3-row" style="max-width:1500px;">
 <div>
-  <img class="logo inline" src="logo.png"/>
-<p class="disclaimer inline">This page triangulates a place on the map based on the places listed and the years (weights) specified for each place.
+  <img class="w3-image logo" src="logo.png"/>
+</div>
+  <div class="w3-threequarter w3-auto">
+<p class="disclaimer w3-hide-small">This page triangulates a place on the map based on the places listed and the years (weights) specified for each place.
   The bigger the value, the closer the cross point to that location. As places are added, the common point is recalculated</p>
 </div>
 </header>
