--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4876980769131635"
+          crossorigin="anonymous"></script>
 </head>
 <body id="markers-on-the-map">
 <header class="w3-center w3-blue w3-padding-16 w3-content w3-row" style="max-width:1500px;">
